tests/NormalTests/paczka1/fuzzy1/62626322.err
Error in line 12: APdrV A630 23,4
Error in line 11: DdIeAhpe A865 50,6
Error in line 19: A630 A630 143,2
Error in line 31: A630 A865 97,4
